<resources>
    <string name="app_name">Join The Offer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myproduts">My Products</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_insertitem">Insert item</string>
    <string name="menu_myjoin">My join</string>
</resources>
