<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/menu_home"/>

        <item
                android:id="@+id/nav_myproducts"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/menu_myproduts"/>

        <item
                android:id="@+id/nav_myjoin"
                android:icon="@drawable/ic_add_shopping_cart_black_24dp"
                android:title="@string/menu_myjoin"/>

        <item
                android:id="@+id/nav_insertitem"
                android:icon="@drawable/ic_add_circle_black_24dp"
                android:title="@string/menu_insertitem"/>
    </group>

    <item android:title="Exit">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
